--- a/app/html/user/settings/preferences.html
+++ b/app/html/user/settings/preferences.html
@@ -20,10 +20,10 @@
                 <label for="show_nsfw" class="new-form-one">@{edituserform.show_nsfw.label.text}</label>
                 @{edituserform.show_nsfw()!!html}
             </div>
-<!--            <div class="new-form-one">
+            <div class="new-form-one">
                 <label for="experimental" class="new-form-one">@{edituserform.experimental.label.text}</label>
                 @{edituserform.experimental()!!html}
-            </div>-->
+            </div>
 <!--            <div class="new-form-one">
                 <label for="noscroll" class="new-form-one">@{edituserform.noscroll.label.text}</label>
                 @{edituserform.noscroll()!!html}
