--- a/app/html/sub.html
+++ b/app/html/sub.html
@@ -72,4 +72,7 @@
   @if not current_user.block_styles():
     <link rel="stylesheet" href="@{url_for('sub.get_css', sub=sub['name'])}">
   @end
+  @if "labrat" in current_user.prefs:
+    <label id="pagefoot-labrat" data-value="true" class="hide"></label>
+  @end
 @end
