--- a/app/html/sub.html
+++ b/app/html/sub.html
@@ -72,7 +72,7 @@
   @if not current_user.block_styles():
     <link rel="stylesheet" href="@{url_for('sub.get_css', sub=sub['name'])}">
   @end
-  @if "labrat" in current_user.prefs:
+  @if ("labrat" in current_user.prefs) or subInfo.get('disable_auto_expandos', 0) == '1':
     <label id="pagefoot-labrat" data-value="true" class="hide"></label>
   @end
 @end
