--- a/app/html/sub/settings.html
+++ b/app/html/sub/settings.html
@@ -95,6 +95,13 @@
         </div>
 
         <div class="pure-control-group">
+          <label for="disable_auto_expandos" class="pure-checkbox">
+            @{editsubform.disable_auto_expandos(checked=True if metadata.get('disable_auto_expandos') else False)!!html}
+            @{editsubform.disable_auto_expandos.label.text}
+          </label>
+        </div>
+
+        <div class="pure-control-group">
           <label for="commentscore_delay" class="pure-control-group">
               @{editsubform.commentscore_delay.label.text}
               @{editsubform.commentscore_delay!!html} (min)
