--- a/app/html/user/settings/preferences.html
+++ b/app/html/user/settings/preferences.html
@@ -41,6 +41,10 @@
                 @{edituserform.language(autocomplete="off")!!html}
             </div>
 
+            <div class="new-form-one">
+                <label for="highlight_unseen_comments" class="new-form-one">@{edituserform.highlight_unseen_comments.label.text}</label>
+                @{edituserform.highlight_unseen_comments()!!html}
+            </div>
 
             <div class="new-form-one">
                 <label for="email_notify" class="new-form-one">@{edituserform.email_notify.label.text}</label>
