--- a/app/html/indexmulti.html
+++ b/app/html/indexmulti.html
@@ -39,10 +39,10 @@
 <!--  {%endif%}-->
 
   @if len(posts) == 25:
-    <a href="@{url_for(sort_type, page=(page+1), sublist=sublist, **kw)}" class="pure-button">@{_('Next page')}</a>
+    <a href="@{url_for(sort_type, page=(page+1), sublist=sublist, **kw)}" class="pure-button alldarightnext" style="font-size:15px;">@{_('Next page')}</a>
   @end
   @if page > 1:
-    <a href="@{url_for(sort_type, page=(page-1), sublist=sublist, **kw)}" class="pure-button">@{_('Previous page')}</a>
+    <a href="@{url_for(sort_type, page=(page-1), sublist=sublist, **kw)}" class="pure-button" style="font-size:15px;">@{_('Previous page')}</a>
   @end
 @end
 
