--- a/app/html/user/savedposts.html
+++ b/app/html/user/savedposts.html
@@ -40,10 +40,10 @@
     </div>
 
     @if len(posts) == 20:
-      <a href="@{url_for(sort_type, page=(page+1), user=user.name)}" class="pure-button">@{_('Next')}</a>
+      <a href="@{url_for(sort_type, page=(page+1), user=user.name)}" class="pure-button alldarightposts">@{_('Next')}</a>
     @end
     @if page > 1:
-      <a href="@{url_for(sort_type, page=(page-1), user=user.name)}" class="pure-button alldaright">@{_('Previous')}</a>
+      <a href="@{url_for(sort_type, page=(page-1), user=user.name)}" class="pure-button alldaleftposts">@{_('Previous')}</a>
     @end
 </div>
 @end
