--- a/app/html/user/uploads.html
+++ b/app/html/user/uploads.html
@@ -57,10 +57,10 @@
 
 <div class="col-12">
   @if len(uploads) == 30:
-    <a href="@{url_for('user.view_user_uploads', page=(page+1))}" class="pure-button">@{_('Next')}</a>
+    <a href="@{url_for('user.view_user_uploads', page=(page+1))}" class="pure-button alldarightposts">@{_('Next')}</a>
   @end
   @if page > 1:
-    <a href="@{url_for('user.view_user_uploads', page=(page-1))}" class="pure-button alldarightprev">@{_('Previous')}</a>
+    <a href="@{url_for('user.view_user_uploads', page=(page-1))}" class="pure-button alldaleftposts">@{_('Previous')}</a>
   @end
 </div>
 </div>
