--- a/app/html/shared/sidebar/sub.html
+++ b/app/html/shared/sidebar/sub.html
@@ -108,8 +108,8 @@
   @end
 @end
 
-<!--
-@if subInfo.get('flairs'):
+
+@if subInfo.get('flairs') and subInfo.get('enable_flairpicker', 0) == '1':
   <form class="pure-form pure-g flairpicker">
     <select id="flairpicker" class="pure-u-1">
       <option value="" disabled selected>@{_('Show posts with flair...')}</option>
@@ -119,7 +119,7 @@
     </select>
   </form>
 @end
--->
+
 
 <hr>
 @if sub['sidebar'] != '':
