--- a/app/html/subs.html
+++ b/app/html/subs.html
@@ -114,7 +114,7 @@
     @if nav=='home.subs_search':
       <div class="col-12">
         @if len(subs) == 50 and kw['subs_count'] > 50:
-        <a href="@{url_for(nav,term=term, page=(page+1))}" class="pure-button alldaright">==></a>
+        <a href="@{url_for(nav,term=term, page=(page+1))}" class="pure-button alldarightposts">==></a>
         @end
         @if page > 1:
         <a href="@{url_for(nav, term=term, page=(page-1))}" class="pure-button alldaleftposts"><==</a>
@@ -123,7 +123,7 @@
     @else:
       <div class="col-12">
         @if len(subs) == 50 and kw['subs_count'] > 50:
-        <a href="@{url_for(nav, page=(page+1))}" class="pure-button alldaright">==></a>
+        <a href="@{url_for(nav, page=(page+1))}" class="pure-button alldarightposts">==></a>
         @end
         @if page > 1:
         <a href="@{url_for(nav, page=(page-1))}" class="pure-button alldaleftposts"><==</a>
