--- a/app/html/sub/log.html
+++ b/app/html/sub/log.html
@@ -126,12 +126,12 @@
       </li>
       @end
     </ol>
-      @if page > 1:
-      <a href="@{url_for('sub.view_sublog', sub=sub['name'], page=(page-1))}" class="btn">@{_('Previous page')}</a>
+      @if len(logs) == 50:
+      <a href="@{url_for('sub.view_sublog', sub=sub['name'], page=(page+1))}" class="pure-button alldarightposts">@{_('Next')}</a>
       @end
 
-      @if len(logs) == 50:
-      <a href="@{url_for('sub.view_sublog', sub=sub['name'], page=(page+1))}" class="btn">@{_('Next page')}</a>
+      @if page > 1:
+      <a href="@{url_for('sub.view_sublog', sub=sub['name'], page=(page-1))}" class="pure-button alldaleftposts">@{_('Previous')}</a>
       @end
     </div>
 </div>
