--- a/app/html/sub/log.html
+++ b/app/html/sub/log.html
@@ -112,7 +112,7 @@
           @end
         </div>
         <div data-name="@{_('User:')}" class="elem sub pure-u-1 pure-u-md-4-24">
-          @if log.action in [22, 23, 24, 26, 27, 28, 52, 53, 58, 59, 76] and log.target is not None:
+          @if log.action in [22, 23, 24, 26, 27, 28, 52, 53, 58, 59, 76, 88] and log.target is not None:
           <a href="/u/@{log.target.name}">@{log.target.name}</a>
               @end
         </div>
