Allow mods to invite members into private subs

--- a/app/html/sub/members.html
+++ b/app/html/sub/members.html
@@ -48,7 +48,7 @@
       <hr/>
 
       <!-- Pending Member Invites Section -->
-      @if (current_user.is_admin() or current_user.is_mod(sub.sid, 0)) and sub.private:
+      @if (current_user.is_admin() or current_user.is_mod(sub.sid, 1)) and sub.private:
         <div class="editmoderators col-12">
           <form data-reload="true" action="@{url_for('do.inv_member', sub=sub.name)}" id="edit-member-form" data-sub="@{sub.name}" class="pure-form ajaxform">
             @{editmemberform.csrf_token()!!html}
@@ -74,7 +74,7 @@
       <hr/>
       @end
 
-      @if current_user.is_admin() or current_user.is_mod(sub.sid, 0):
+      @if current_user.is_admin() or current_user.is_mod(sub.sid, 1):
         @if len(subMembers['members']) == 0:
           <p>@{_('Active members: none')}</p>
         @else:
@@ -85,7 +85,9 @@
                 <li>
                   <a href="@{url_for('user.view', user=member['name'])}">@{member['name']}</a>
                   @if sub.private:
+                    @if current_user.is_admin() or current_user.is_mod(sub.sid, 0):
                     (<a data-sub="@{sub.name}" data-user="@{member['name']}" class="slink remove-member">@{_('remove')}</a>)
+                    @end
                   @end
                 </li>
               </span>
