--- a/app/html/sub/blocked.html
+++ b/app/html/sub/blocked.html
@@ -10,7 +10,7 @@
         @if sub.status == 1:
             @{_('The sub has been banned by the administration due to ToS/rule violations.')}
         @elif sub.status == 2:
-            @{_('The sub is temporally quarantined and will be back soon.')}
+            @{_('The sub has been temporarily quarantined.')}
         @endif
         </p>
     </div>
