--- a/app/html/site/activity.html
+++ b/app/html/site/activity.html
@@ -13,6 +13,14 @@
 <div id="center-container">
   <div class="content" style="margin-left: 1em">
     <h1>@{_("Recent activity")}</h1>
+    <!-- Toggle control -->
+    <div class="toggle-container" style="margin: 1em 0; display: flex; align-items: center; gap: 10px;">
+      <span class="toggle-label" style="font-weight: bold;">@{_("Show posts only:")}</span>
+      <label class="toggle-switch" style="position: relative; display: inline-block; width: 42px; height: 24px;">
+        <input type="checkbox" id="posts-only-toggle" style="opacity: 0; width: 0; height: 0;">
+        <span class="slider" style="position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #ccc; transition: .4s; border-radius: 24px;"></span>
+      </label>
+    </div>
     <ol class="mod-table">
     <li class="mod-table-header pure-g">
       <div class="header pure-u-1 pure-u-md-3-24">@{_('Time')}</div>
@@ -21,7 +29,7 @@
       <div class="header pure-u-1 pure-u-md-4-24">@{_('Sub')}</div>
     </li>
     @for it in activity:
-    <li class="mod-table-row pure-g">
+    <li class="mod-table-row pure-g" data-type="@{it['type']}">
       <div data-name="@{_('Time:')}" class="elem sub pure-u-1 pure-u-md-3-24">
         <time-ago datetime="@{it['time'].isoformat()}Z" class="sidebarlists"></time-ago>
       </div>
