Ensuring posts.html and savedposts.html expandos follow user's auto-expando preference

--- a/app/html/user/savedposts.html
+++ b/app/html/user/savedposts.html
@@ -47,4 +47,10 @@
     @end
 </div>
 @end
+
+@def pagefoot():
+  <label id="pagefoot-oindex" data-value="true" class="hide"></label>
+  @if not config.site.auto_expandos or ("labrat" in current_user.prefs):
+    <label id="pagefoot-labrat" data-value="true" class="hide"></label>
+  @end
 @end
