--- a/app/html/user/posts.html
+++ b/app/html/user/posts.html
@@ -52,3 +52,10 @@
 </div>
 @end
 @end
+
+@def pagefoot():
+  <label id="pagefoot-oindex" data-value="true" class="hide"></label>
+  @if not config.site.auto_expandos or ("labrat" in current_user.prefs):
+    <label id="pagefoot-labrat" data-value="true" class="hide"></label>
+  @end
+@end
